projects/lungmen.akn/src/apps/mealie/mealie.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
