projects/lungmen.akn/src/apps/mealie/mealie.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/include-unifi: "true"
    link.argocd.argoproj.io/external-link: https://miam.chezmoi.sh
  name: mealie-websecure
spec:
  hostnames:
    - miam.chezmoi.sh
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mealie
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
